search Youtube Video works

--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
       <br/><br/><br/>
     </h5>
   </div>
+
   <script src="src/data/exampleVideoData.js"></script>
+  <script src="compiled/src/lib/searchYouTube.js"></script>
+  <script src="compiled/src/config/youtube.js"></script>
   <script src="compiled/src/components/VideoListEntry.js"></script>
   <script src="compiled/src/components/VideoList.js"></script>
   <script src="compiled/src/components/VideoPlayer.js"></script>
