HMTL and package json ready to work

--- a/public/index.html
+++ b/public/index.html
@@ -1,16 +1,41 @@
 <!DOCTYPE html>
 <html>
 
-  <head>
-    <meta charset="utf-8">
-    <link href=styles/style.css" type="text/css" rel="stylesheet">
-
-    <title>App-Comer</title>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>App-Comer</title>
+  <link rel="stylesheet" href="styles/style.css">
+  <script src="node_modules/jquery/dist/jquery.js "></script>
+  <script src="node_modules/react/dist/react.js "></script>
+  <script src="node_modules/react-dom/dist/react-dom.js "></script>
   </head>
 
   <body>
-    <div id='app'></div>
-    <script type='text/javascript' src='bundle.js'></script>
-  </body>
+    <div id="app ">
+    <h5>
+      <br/>
+      this message will disappear when <em>app</em> view is correctly rendered
+      <br/>
+      </h5>
+    </div>
 
+<div>
+  <br/>
+    <text src="src/data/maps_Dummie_Data.js">'HOla que ace'</text>
+  <br/>
+  </h5>
+  </div>
+    <script src="src/data/yelp_Dummie_Data.js"></script>
+    <script src="compiled/src/lib/searchGoogleMaps.js"></script>
+    <script src="compiled/src/lib/searchYelp.js"></script>
+    <script src="compiled/src/lib/searchYouTube.js"></script>
+    <script src="compiled/src/config/API_SOURCES.js"></script>
+    <script src="compiled/src/components/map.js"></script>
+    <script src="compiled/src/components/search.js"></script>
+    <script src="compiled/src/components/share.js"></script>
+    <script src="compiled/src/components/tableList.js"></script>
+    <script src="compiled/src/components/tableResult.js"></script>
+    <script type="text/javascript' src='bundle.js"></script>
+  </body>
 </html>
