Fixed index.html repository location

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
 
   <body>
-    <div id="app ">
+    <div id="app">
     <h5>
       <br/>
       this message will disappear when <em>app</em> view is correctly rendered
@@ -22,7 +22,7 @@
 
 <div>
   <br/>
-    <text src="src/data/maps_Dummie_Data.js">'HOla que ace'</text>
+    <text src="src/data/maps_Dummie_Data.js">Hello World</text>
   <br/>
   </h5>
   </div>
@@ -36,6 +36,5 @@
     <script src="compiled/src/components/share.js"></script>
     <script src="compiled/src/components/tableList.js"></script>
     <script src="compiled/src/components/tableResult.js"></script>
-    <script type="text/javascript' src='bundle.js"></script>
   </body>
 </html>
