fixed index problems, just left three reference errors

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <title>App-Comer</title>
   <link rel="stylesheet" href="styles/style.css">
   <script src="node_modules/jquery/dist/jquery.js "></script>
-  <script src="node_modules/react/dist/react.js "></script>
-  <script src="node_modules/react-dom/dist/react-dom.js "></script>
+  <script src="node_modules/react/umd/react.production.min.js "></script>
+  <script src="node_modules/react-dom/umd/react-dom.production.min.js "></script>
   </head>
 
   <body>
@@ -22,15 +22,14 @@
 
 <div>
   <br/>
-    <text src="src/data/maps_Dummie_Data.js">Hello World</text>
+    <text src="src/data/maps_Dummie_Data.js">Hello World1.1</text>
   <br/>
   </h5>
   </div>
     <script src="src/data/yelp_Dummie_Data.js"></script>
     <script src="compiled/src/lib/searchGoogleMaps.js"></script>
     <script src="compiled/src/lib/searchYelp.js"></script>
-    <script src="compiled/src/lib/searchYouTube.js"></script>
-    <script src="compiled/src/config/API_SOURCES.js"></script>
+    <script src="/config/API_SOURCES.js"></script>
     <script src="compiled/src/components/map.js"></script>
     <script src="compiled/src/components/search.js"></script>
     <script src="compiled/src/components/share.js"></script>
