search rendering implemented map not rendering

--- a/index.html
+++ b/index.html
@@ -1,5 +1,11 @@
 <!DOCTYPE html>
 <html>
+<style>
+       #map {
+        height: 400px;
+        width: 100%;
+       }
+    </style>
 
 <head>
   <meta charset="utf-8">
