--- a/index.html
+++ b/index.html
@@ -1,16 +1,22 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
-<style>
-       #map {
-        height: 400px;
-        width: 100%;
-       }
-    </style>
-
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>App-Comer</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <style>
+     /* Always set the map height explicitly to define the size of the div
+      * element that contains the map. */
+     #map {
+       height: 100%;
+     }
+     /* Optional: Makes the sample page fill the window. */
+     html, body {
+       height: 100%;
+       margin: 0;
+       padding: 0;
+     }
+   </style>
   <link rel="stylesheet" href="styles/style.css">
   <script src="node_modules/jquery/dist/jquery.js "></script>
   <script src="node_modules/react/umd/react.production.min.js "></script>
@@ -20,16 +26,19 @@
   <body>
     <div id="app">
       <input id="pac-input" class="controls" type="text" placeholder="Search Box">
-<div id="map"></div>
-<!-- Replace the value of the key parameter with your own API key. -->
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBD2x3uoBXe8vWtIaBkvRvlrD9msa-XhnM&libraries=places&callback=initAutocomplete"
-         async defer></script>
-    <h5>
-      <br/>
-      this message will disappear when <em>app</em> view is correctly rendered
-      <br/>
-      </h5>
-    </div>
+<div id="map">map</div>
+<script>
+      function initMap() {
+        // Create a map object and specify the DOM element for display.
+        var map = new google.maps.Map(document.getElementById('map'), {
+          center: {lat: -34.397, lng: 150.644},
+          zoom: 8
+        });
+      }
+    </script>
+//<!//--// Loads Maps Javascript API using a script tag. -->
+<!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBD2x3uoBXe8vWtIaBkvRvlrD9msa-XhnM&callback=initMap"
+    async defer></script>
 
 <div>
   <br/>
@@ -46,5 +55,40 @@
     <script src="compiled/src/components/share.js"></script>
     <script src="compiled/src/components/tableList.js"></script>
     <script src="compiled/src/components/tableResult.js"></script>
+  </body>
+</html> --> -->
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Simple Map</title>
+    <meta name="viewport" content="initial-scale=1.0">
+    <meta charset="utf-8">
+    <style>
+      /* Always set the map height explicitly to define the size of the div
+       * element that contains the map. */
+      #map {
+        height: 100%;
+      }
+      /* Optional: Makes the sample page fill the window. */
+      html, body {
+        height: 100%;
+        margin: 0;
+        padding: 0;
+      }
+    </style>
+  </head>
+  <body>
+    <div id="map"></div>
+    <script>
+      var map;
+      function initMap() {
+        map = new google.maps.Map(document.getElementById('map'), {
+          center: {lat: 19.397806, lng:  -99.171394},
+          zoom: 8
+        });
+      }
+    </script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBD2x3uoBXe8vWtIaBkvRvlrD9msa-XhnM&callback=initMap"
+    async defer></script>
   </body>
 </html>
